# Oplus-Smart-Dimming

./: .gitignore  README.md  action.sh  customize.sh  kernelsu-3.0.2.tgz  module.prop  service.sh
docs/: cpp-migration-plan.md  release-notes-v4.2.md
native/: CMakeLists.txt
native/src/: app_monitor.cpp  app_monitor.h  config_manager.cpp  config_manager.h  main.cpp  screen_monitor.cpp  screen_monitor.h  state_controller.cpp  state_controller.h  system_utils.cpp  system_utils.h
scripts/: build_native.ps1  build_native_wsl.sh  clear_log.sh  common.sh  legacy_loop.sh  list_apps.sh  package_release.ps1  read_config.sh  read_log.sh  read_state.sh  restart_service.sh  save_config.sh  set_debug.sh  set_refresh_interval.sh
webroot/: index.html
webroot/lib/: kernelsu.js
